--- a/src/anim.css
+++ b/src/anim.css
@@ -1,3 +1,18 @@
+@keyframes fullscreen-loading {
+  0% {
+    transform: rotateY(0deg);
+  }
+  25% {
+    transform: rotateY(180deg);
+  }
+  50% {
+    transform: rotateY(480deg);
+  }
+  100% {
+    transform: rotateY(1080deg);
+  }
+}
+
 @keyframes incorrect-answer {
   from {
     background-color: #e74c3c;
@@ -63,4 +78,12 @@
   animation-direction: alternate;
   animation-timing-function: linear;
   animation-iteration-count: 1;
+}
+
+.anim-fullscreen-loading {
+  animation-name: fullscreen-loading;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
