feat: NotFound Page

--- a/src/anim.css
+++ b/src/anim.css
@@ -1,3 +1,15 @@
+@keyframes notfound {
+  0% {
+    transform: translate(-100%, 0%) rotate(-180deg);
+  }
+  50% {
+    transform: translate(0%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(100%, 0%) rotate(180deg);
+  }
+}
+
 @keyframes slide-left-to-right {
   from {
     transform: translateX(-100%);
@@ -135,4 +147,12 @@
   animation-name: slide-right-to-left;
   animation-duration: 0.5s;
   animation-timing-function: linear;
+}
+
+.anim-notfound {
+  animation-name: notfound;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
